<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bckgrd1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.patrik.projekts2.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/acceler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        android:text="@string/Akcelerometer"
        android:onClick="onClick" />

    <Button
        android:id="@+id/compass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:text="@string/Compass"
        android:onClick="onClick" />

    <Button
        android:id="@+id/proxi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:text="@string/Proximity_senzor"
        android:onClick="onClick" />

    <Button
        android:id="@+id/light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"
        android:text="@string/Light_senzor"
        android:onClick="onClick" />
    <Button
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Camera"
        android:onClick="onClick"
        android:layout_marginTop="240dp" />
</RelativeLayout>
